# ozon_api

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 3503fb241029_initial_commit.py
ozon_api/: app.py  endpoint.py
ozon_api/crud/: ozon_crud.py
ozon_api/db/: database.py
ozon_api/endpoints/: endpoint.py
ozon_api/exceptions/: ozon_exceptions.py
ozon_api/schemas/: ozon_schema.py
ozon_api/services/: ozon_service.py
